modules/network/main.tf
locals {
  vnet_address_prefix = "10.0"
}

resource "azurerm_virtual_network" "default" {
  name                = "vnet-${var.workload}"
  address_space       = ["${local.vnet_address_prefix}.0.0/16"]
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_private_dns_zone_virtual_network_link" "private_litware" {
  name                  = "private-litware"
  resource_group_name   = var.resource_group_name
  private_dns_zone_name = var.private_dns_zone_name
  virtual_network_id    = azurerm_virtual_network.default.id
  registration_enabled  = true
}

### Subnets ###
resource "azurerm_subnet" "bastion" {
  name                 = "AzureBastionSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.5.0/26"]
}

resource "azurerm_subnet" "windows" {
  name                 = "windows"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.10.0/24"]
}

resource "azurerm_subnet" "private_endpoints" {
  name                 = "private-endpoints"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.20.0/24"]
}

resource "azurerm_subnet" "training" {
  name                 = "training"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.40.0/24"]
}

resource "azurerm_subnet" "scoring" {
  name                 = "scoring"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.90.0/24"]
}

resource "azurerm_subnet" "scoring_aks_api" {
  name                 = "scoring-aks-api"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.95.0/24"]
}

resource "azurerm_subnet" "proxy" {
  name                 = "proxy"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.default.name
  address_prefixes     = ["${local.vnet_address_prefix}.200.0/24"]
}

### Network Security Groups ###
module "nsg_bastion" {
  source              = "./nsg/bastion"
  workload            = var.workload
  resource_group_name = var.resource_group_name
  location            = var.location
  subnet_id           = azurerm_subnet.bastion.id
}

module "nsg_windows" {
  source              = "./nsg/windows"
  workload            = var.workload
  resource_group_name = var.resource_group_name
  location            = var.location
  subnet_id           = azurerm_subnet.windows.id
  bastion_subnet_cidr = azurerm_subnet.bastion.address_prefixes
}



### Default NSG ###
resource "azurerm_network_security_group" "default" {
  name                = "nsg-default"
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet_network_security_group_association" "private_endpoints" {
  subnet_id                 = azurerm_subnet.private_endpoints.id
  network_security_group_id = azurerm_network_security_group.default.id
}

resource "azurerm_subnet_network_security_group_association" "scoring" {
  subnet_id                 = azurerm_subnet.scoring.id
  network_security_group_id = azurerm_network_security_group.default.id
}

resource "azurerm_subnet_network_security_group_association" "scoring_aks_api" {
  subnet_id                 = azurerm_subnet.scoring_aks_api.id
  network_security_group_id = azurerm_network_security_group.default.id
}


### Proxy NSG ###
resource "azurerm_network_security_group" "proxy" {
  name                = "nsg-proxy"
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet_network_security_group_association" "proxy" {
  subnet_id                 = azurerm_subnet.proxy.id
  network_security_group_id = azurerm_network_security_group.proxy.id
}

resource "azurerm_network_security_rule" "allow_inbound_ssh_proxy" {
  name                        = "AllowInboundSSH"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "${var.allowed_ip_address}/32"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.proxy.name
}

### Training NSG ###
resource "azurerm_network_security_group" "training" {
  name                = "nsg-training"
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet_network_security_group_association" "training" {
  subnet_id                 = azurerm_subnet.training.id
  network_security_group_id = azurerm_network_security_group.training.id
}

resource "azurerm_network_security_rule" "allow_inbound_ssh_compute_instances" {
  name                        = "AllowInboundSSH"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "${var.allowed_ip_address}/32"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.training.name
}

resource "azurerm_network_security_rule" "allow_vnet_outbound" {
  name                        = "AllowVNETOnly"
  priority                    = 100
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = var.training_nsg_source_address_prefix
  destination_address_prefix  = var.training_nsg_destination_address_prefix
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.training.name
}

resource "azurerm_network_security_rule" "block_internet_outbound" {
  name                        = "DenyAllOutbound"
  priority                    = 200
  direction                   = "Outbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.training.name
}
